# nostop_kinect_sensor

./: CMakeLists.txt  kalman_filter.cpp  logitech_calibration_file.txt  logitech_far_calibration_file.txt  logitech_near_calibration_file.txt  package.xml  philips_calibration_file.txt  script.sh  script.sh~  script_calibration.sh  script_cam.sh  script_view_angle.sh
cfg/: R_value.cfg  calibration_values.cfg
include/nostop_kinect_sensor/: .kdev_include_paths  Ball_tracker.h  Calibration_class.h  Camera.h  Camera_manager.h  Collection.h  Collector.h  Fake_imu.h  Robot.h  Robot_manager.h  SensorCollection.h  SensorCollector.h  Tracker.h  ball_position.h  some_struct.h
launch/: Sensor.launch  acquisition_node_launch.launch  angle_view_calculation.launch  camera_view.launch  fake_imu.launch  kinect.launch  logitech-cam.launch  node_launch.launch  philips-cam.launch  usb-cam.launch
msg/: AgentSensorData.msg  Camera_data.msg  Camera_data_msg.msg  Id_robot.msg  SensorData.msg
src/: Ball_tracker.cpp  Calibration.cpp  Calibration_class.cpp  Camera.cpp  Camera_manager.cpp  Collection.cpp  Collector.cpp  Fake_imu.cpp  Robot.cpp  Robot_manager.cpp  Sensor.cpp  SensorCollection.cpp  SensorCollector.cpp  Tracker.cpp  acquisition_node.cpp  calib_to_file.cpp  calibration.cpp  cam_view_angle.cpp  camera_manager_if_method.cpp  fake_imu_node.cpp  rect_try  sensor_node.cpp  test  test.cpp  test_kf.cpp
srv/: Camera_data_srv.srv
