<?xml version="1.0"?>
<package>
  <name>nostop_kinect_sensor</name>
  <version>0.0.0</version>
  <description>The nostop_kinect_sensor package</description>

  <maintainer email="nardi@mail.dm.unipi.it">SimoneNardi</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
    
  <build_depend>base_math</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <run_depend>base_math</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>

</package>